--- a/lab5-Node/package.json
+++ b/lab5-Node/package.json
@@ -8,7 +8,8 @@
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "start": "node index.js",
     "sync": "run-s tailwind:css start",
-    "dev": "nodemon -e ejs,js -x 'npm run sync'"
+    "dev:linux": "nodemon -e ejs,js -x 'npm run sync'",
+    "dev:windows": "nodemon -e ejs,js -x npm run sync"
   },
   "keywords": [],
   "author": "",
